<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AxisData" Id="{c976b1a9-c779-4a1e-b67f-e1e423c83a59}">
    <Declaration><![CDATA[TYPE AxisData :
STRUCT
	lrActPosition			:		LREAL;
	lrActVelocity			:		LREAL;
	lrActTorque				:		LREAL;
	lrMotorTemp				:		LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>