<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="StageBase" Id="{53fc44e1-d8c2-4f26-9394-3a6a1d18d353}">
    <Declaration><![CDATA[TYPE StageBase :
STRUCT
	bEnable			:		BOOL;
	bTrigger		:		BOOL;
	bMoveActive		:		BOOL;
	tMoveTime		:		TIME;
	intSteps		:		INT;
	Step			:		ARRAY[1..5] OF StepBase;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>